unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/breadwinner_ns__BW_Subscription_Price__c.object-meta.xml
<CustomObject>
    <label>NetSuite Subscription Price</label>
    <nameField>
        <label>Price Line #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Subscription Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>