unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/fields/breadwinner_ns__ChargeTypeName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ChargeTypeName__c</fullName>
    <label>Subscription Line Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>