unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/fields/breadwinner_ns__EndDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>