unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/fields/breadwinner_ns__ProrateByOptionInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ProrateByOptionInternalId__c</fullName>
    <label>Prorate By Option Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>