unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/fields/breadwinner_ns__Quantity__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>