unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/fields/breadwinner_ns__RepeatEvery__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RepeatEvery__c</fullName>
    <label>Repeat Every</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>