unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/fields/breadwinner_ns__Subscription__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Subscription</label>
    <referenceTo>breadwinner_ns__BW_Subscription__c</referenceTo>
    <relationshipLabel>NetSuite Subscription Prices</relationshipLabel>
    <relationshipName>BWSubscriptionPrices</relationshipName>
    <type>Lookup</type>
</CustomField>