unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/fields/breadwinner_ns__TotalIntervalValue__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__TotalIntervalValue__c</fullName>
    <label>Total Interval Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>