unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__NS_Object_Type__c</columns>
    <columns>breadwinner_ns__LineNumber__c</columns>
    <columns>breadwinner_ns__Frequency__c</columns>
    <columns>breadwinner_ns__Quantity__c</columns>
    <columns>breadwinner_ns__Discount__c</columns>
    <columns>breadwinner_ns__ItemInternalId__c</columns>
    <columns>breadwinner_ns__ProrateBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>