unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/listViews/breadwinner_ns__NetSuite_Subscription_Price_Book_Lines.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Subscription_Price_Book_Lines</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__LineNumber__c</columns>
    <columns>breadwinner_ns__Frequency__c</columns>
    <columns>breadwinner_ns__PriceBookInternalId__c</columns>
    <columns>breadwinner_ns__PricePlanInternalId__c</columns>
    <columns>breadwinner_ns__Quantity__c</columns>
    <columns>breadwinner_ns__StartOffSetUnit__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>breadwinner_ns__NS_Object_Type__c</field>
        <operation>equals</operation>
        <value>PriceBookLine</value>
    </filters>
    <label>NetSuite Subscription Price Book Lines</label>
</ListView>