unpackaged/main/default/objects/breadwinner_ns__BW_Subscription_Price__c/listViews/breadwinner_ns__NetSuite_Subscription_Prices.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Subscription_Prices</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__LineNumber__c</columns>
    <columns>breadwinner_ns__Status__c</columns>
    <columns>breadwinner_ns__ItemInternalId__c</columns>
    <columns>breadwinner_ns__Quantity__c</columns>
    <columns>breadwinner_ns__StartDate__c</columns>
    <columns>breadwinner_ns__Frequency__c</columns>
    <columns>breadwinner_ns__CatalogType__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>breadwinner_ns__NS_Object_Type__c</field>
        <operation>equals</operation>
        <value>SubscriptionPriceLine</value>
    </filters>
    <label>NetSuite Subscription Prices</label>
</ListView>